# poetry-pybind11

./: .gitignore  README.md  build.py  pyproject.toml
poetry_pybind11/: __init__.py  fast_fib.cpp
tests/: test_correct.py
